# thor-whisper-trt

./: .gitignore  Dockerfile  Dockerfile.ros  Makefile  README.md
script/: start.sh  test_config.py  time_whisper.py  time_whisper_trt.py
src/speech_to_text/: CMakeLists.txt  package.xml
src/speech_to_text/launch/: robot.launch.py
src/speech_to_text/scripts/: speech_to_text_node.py
src/text_to_cmd_vel/: Cargo.toml  package.xml
src/text_to_cmd_vel/src/: text_to_cmd_vel.rs
